--- a/shared/talk/話題のカテゴリ.md
+++ b/shared/talk/話題のカテゴリ.md
@@ -10,45 +10,60 @@
 ## 個人
 
 - 近況
+  - さっきまでのこと
+  - 最近のこと
+    - ハマっているもの
 - 過去
   - 失敗
 - 将来
   - 夢
   - 不安
 - 人柄
-  - 考え方
-  - 感じ方
+  - 考え方や感じ方
+    - 大事にしていること
+    - 感情が動くこと
     - 好み
 - 個人情報
   - 年齢
   - 出身地
-  - 誕生日
+  - 誕生日や記念日
 - 趣味や娯楽
   - 余暇の過ごし方
-- 旅行や帰省
+- 旅行
 - 健康
   - 病気や怪我
   - 美容
 - 財産
-- 生活
-  - 衣食住
-    - 家
-    - 店
-- 仕事
+- 感謝していること
 
-## 身近な人
+## 身近なこと
 
-- 家族や友人
-- 上司や同僚
-
-## 恋愛
-
+- 家族
+  - 家族構成
+- 友人
 - 恋愛
-  - 理想
-  - 経験
-- 結婚
-  - 恋人
-  - 子供
+  - デート
+  - セックス
+  - 過去の交際相手
+  - 結婚
+    - 恋人
+    - 子供
+- 食事
+  - 家
+    - 料理
+  - 店
+- 仕事
+  - 職業
+  - 職歴
+  - 上司や同僚
+
+## 目の前のこと
+
+- 人
+- 店
+  - 食事
+  - 食器
+  - 雰囲気
 
 ## 社会
 
