--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -83,3 +83,5 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 - どういう単位の契約にするか
 - どうやって支払うか
 - どうやって既存顧客を維持するか
+
+どんなビジネスも最初はやはり何らかのスキルから始まる。組織を動かすスキルはその後。
