--- a/shared/communication/コミュニケーション.md
+++ b/shared/communication/コミュニケーション.md
@@ -283,3 +283,13 @@ social communicationというと企業などから社会に向けた、1:Nのコ
 言語以外のコミュニケーションでも、相手がそれを理解できないと伝わらない。
 愛情を示したり、感情を示したりするのも同じ。
 相手のことを文化的でないサルと断ずる前に、お互いに教え合うのが大事。
+
+周りの人たちの話をちゃんと聞かない、
+他人の考えていることを知る能力が低い、
+
+他人の考えていることは口に出してもらわないとわからない。
+類推するのではなく、会話によって引き出す。
+
+人とのコミュニケーションによって何を知るべきか。
+
+相手が何を知っているのか。
