--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -597,11 +597,6 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 違和感や意外性が大事。不調和。不調和というのは結局、おかしいってこと。
 
-おかしな言動
-おかしな解釈
-おかしな状況
-おかしな対処
-
 見つける、模倣する
 作る、設定する
 
@@ -627,3 +622,7 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 対戦ゲームでは、突飛な発想があると予想しづらい。
 
 ユーモアはなぜ予測可能性を、ひいては信頼性を下げないんだろう？
+
+ユーモアのある言葉選びは隠語なのかも。
+
+言いたいことを言うためにユーモアを使う。
