--- a/games/初心者におすすめのボードゲーム.md
+++ b/games/初心者におすすめのボードゲーム.md
@@ -2,6 +2,8 @@
 
 逆に、早い者勝ちみたいなゲームはちょっと入りづらい。
 
+最初はアイスブレイクで協力ゲームがいい。
+
 ## 定番
 
 - ババ抜き
@@ -11,12 +13,19 @@
 - 将棋
 - 麻雀
 
+## 協力ゲーム
+
+- Kite
+- コードネーム
+- まっぷたツートンソウル
+
 ## パーティゲーム
 
 - あいうえバトル
-- コードネーム
-- ito
-- まっぷたツートンソウル
+
+## 手を動かすゲーム
+
+- Kluster
 
 ## チキンレース系
 
