--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -301,3 +301,6 @@ https://www.total-marriage.com/column/1644/
 深い話題を話すのが大事なら、飲み会の場はむしろ良くないのかも。飲み会の行き帰りの道とか、ちょっと離れたところで二人で話すチャンスを作るのが大事。連絡先を交換して、すぐ連絡するのも大事かも。
 
 どれだけ親しくなっても、友人や恋人になるには別の要素が必要。
+
+合意を得ることで親しくなりやすい。
+「今日、寒くないですか？」とか。
