--- a/shared/communication/media/language/learning/言語を覚える.md
+++ b/shared/communication/media/language/learning/言語を覚える.md
@@ -10,3 +10,7 @@
 外国語は母語に訳さずに理解した方がいい。ベースの意味は覚えるけど、訳さない。
 
 外国語学習は単語を増やしつつ独り言のパターンを増やすのが大事。
+
+言語はまず単語が全ての基礎。語彙を増やすというよりは、基礎的な語彙の熟練度を上げる。
+
+文法よりも単語。
