--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -411,3 +411,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 - ネガティブ・ポライトネス（距離の保持）：相手の負担を減らす、丁寧な距離感を保つ。例：「恐れ入りますが、こちらをご覧ください」。
 
 関心がないと尊重しないことが多い。
+
+尊重には相手を利用するということが含まれていない。
