--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -304,3 +304,6 @@ https://www.total-marriage.com/column/1644/
 
 合意を得ることで親しくなりやすい。
 「今日、寒くないですか？」とか。
+
+人間には「仲良くなりたい」欲求と「踏み込まれたくない」欲求を両方持っている。ポジティブポライトネスとネガティブポライトネス。ちょうどいい距離感で親しくなろうとするのが大事。
+丁寧すぎる言葉遣いはネガティブポライトネスで、続けていると親しくならない。ポジティブとのバランスが取れない。
