--- a/shared/cooking/recipes/noodle/麺料理.md
+++ b/shared/cooking/recipes/noodle/麺料理.md
@@ -3,3 +3,5 @@ https://youtu.be/TzBc-7L5vBE?si=-A9yVHMHfxQTJlMP
 
 そうめんは椎茸だしや昆布だしなど薄めの出汁でもいい。
 うどんやそばは鰹だしに醤油でしっかり味がついてるほうがいい。
+
+油そばのたれはごま油と酢が1:1をベースに、出汁や醤油で味付け。
