--- a/shared/ethics/倫理.md
+++ b/shared/ethics/倫理.md
@@ -47,4 +47,10 @@ moral を善や道徳と比べると、倫理的という意味。
 
 「足りねえな。『怒りを買い』、『殺される』という『危機感』が。」『テラフォーマーズ』
 
-「殺していい理由にはならないが、殺される理由にはなる」
+「殺していい理由にはならないが、殺される理由にはなる」（出典不明）
+
+倫理とは、良いとか悪いとかじゃなくて、人の恨みを買わないこと。
+
+人間なんて包丁一本持って後ろからタックルすれば誰でも殺せる。
+
+下等生物には倫理がない。
