--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -626,3 +626,7 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ユーモアのある言葉選びは隠語なのかも。
 
 言いたいことを言うためにユーモアを使う。
+
+ユーモアがあるせいで、本気でやってるおかしなことをジョークとして受け取ってしまう面もある。
+
+きっと〜に〜があった、という状況の想定がユーモアにつながる。
