--- a/shared/society/謝罪.md
+++ b/shared/society/謝罪.md
@@ -16,3 +16,7 @@
 謝罪を求める場合は贖罪も考えておく。どのように償ったら許すか、のラインを明らかにする。そうでないなら謝らせる意味もない。
 
 謝罪は贖罪の交渉である。謝罪しても罪が許されるとは限らない。
+
+誰かが怒っているのは赤ちゃんが泣き喚いているのと同じなので、しっかり話を聞いてあげるだけでいい。
+怒っているからといって謝る必要もない。
+冷静に不満を伝えて、対価を提示した場合は受け入れて謝ってもいい。
