--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -194,3 +194,5 @@ Lose-WinをLose-Loseに持ち込む。
 戦いは生存競争。勝負ではない。
 
 争いって考え方もwarにまとめちゃっていいか。競合とか競争も。でも競争はgameでも良いかも。
+
+戦争にこそ倫理が必要。できるだけ恨みを買わない。恨みを買うなら殲滅する。
