--- a/shared/talk/話.md
+++ b/shared/talk/話.md
@@ -139,3 +139,11 @@ https://youtu.be/VbbE74lIkAg?si=G51j6Aar5fFz3-no
 - センス
 
 芸人さんですら面白くないときもあるのに、素人が面白いトークを続けられるわけない。
+
+1. 抽象的な話 (主張): 「たしかに」と思われること
+2. 具体的な話 (根拠): エピソードやデータ
+3. 例
+
+この順序で繰り返すのと幅広い話になりやすい。
+
+抽象的な話だけだとふわっとしすぎて面白くない。
