--- a/shared/mood/vibe/ノリ.md
+++ b/shared/mood/vibe/ノリ.md
@@ -32,3 +32,6 @@
 まず、楽しませようとすることから始める。滑っても、恥ずかしくても、慣れないといけない。
 
 つまらない話を聞いてつまらない人が笑ってたらそれなりに盛り上がってる感じになる。
+
+足手まといがいるとノリが悪くなって盛り上がりにくい。
+いっそのこと会話から排除するのも一つの手ではある。
