--- a/shared/people/appearance/tips/脚を長く見せる.md
+++ b/shared/people/appearance/tips/脚を長く見せる.md
@@ -1,9 +1,10 @@
 - 厚底の靴で底上げする
 - 中敷きで底上げする
-- ハイウェスト
-  - タックイン
-  - 短丈のトップス
-    - 服の内側にベルトをつけてトップスの裾を巻き込んで短丈にする
+- 腰を高く見せる
+  - ハイウェスト
+    - タックイン
+    - 短丈のトップス
+      - 服の内側にベルトをつけてトップスの裾を巻き込んで短丈にする
 - 靴がしっかり見える丈のボトムス
 - 裾が広がったボトムス
 - 太めのボトムス
