--- a/shared/people/appearance/tips/顔を小さく見せる.md
+++ b/shared/people/appearance/tips/顔を小さく見せる.md
@@ -1,14 +1,18 @@
 - タイトな帽子を被る
-- 髪でフェイスラインを隠す
-- 髭でフェイスラインを隠す
-- 首周りのボリュームを増やす
-  - ストールやマフラーでフェイスラインを隠す
-  - 襟の高いシャツを選ぶ
-- 首元が開いているシャツを選ぶ
-- シルエットや内側のラインでAラインを作る
+- 髪やひげでフェイスラインを隠す
+- 顔を起点に三角形を作る
+  - Aラインを作る
+  - シルエットや内側のラインでAラインを作る
+  - Yラインを作る
+    - 首元が開いているシャツを選ぶ
+    - 首周りのボリュームを増やす
+      - ストールやマフラーでフェイスラインを隠す
+      - 襟の高いシャツを選ぶ
 
 Aラインは頭や胸を起点に三角形を作ることで、顔が小さく見えやすい。
 太いボトムスとネクタイやプリントの色を合わせることで三角形にする。あとはシャツとボトムスの色を合わせた上で裾が広がる上着を羽織るとか。
 
 https://youtu.be/dVtf1tnFPT8?si=d92WX8fbAu-PIoY-
 顔を小さく見せる。
+
+顔と手首、顔とズボン、みたいな3点の色を合わせることで作る三角形もある。
