--- a/shared/people/appearance/身なりの優先順位.md
+++ b/shared/people/appearance/身なりの優先順位.md
@@ -5,8 +5,9 @@
    2. 美容
       1. 髪や眉を整える
 2. サイズ感
-   1. 顔を小さく見せる
-   2. 背を高く、脚を長く見せる
+   1. スタイルをよく見せる
+      1. 顔を小さく見せる
+      2. 背を高く、脚を長く見せる
 3. 系統
    1. フォーマル・カジュアル
 4. 色
