--- a/shared/trust/intimacy/清潔感.md
+++ b/shared/trust/intimacy/清潔感.md
@@ -1,14 +1,18 @@
+清潔感がないと、病気や貧困を連想させる。
+
 ## 清潔感がなくなっている要因
 
 - 不健康に感じる
   - 肌が乾燥している
     - 肌がテカっている
+    - 肌が荒れている
   - 毛穴が目立つ
     - 毛穴が開いている
     - 毛穴が詰まっている
     - 皮膚がたるんでいる
   - 髪が乾燥している
   - 髪が伸びている
+  - 髪が整えられていない
   - 顔の部品が歪んでいる
     - 形が悪い（縦のバランスが悪い）
     - 左右対称になっていない（横のバランスが悪い）
@@ -27,6 +31,7 @@
     - 赤ら顔でぼーっとしている
     - 咳やくしゃみをしている
 - ずぼら
+  - 服が汚れている
   - 服にシワがついている
 
 ## その他
