--- a/shared/lifestyle/meal/食事.md
+++ b/shared/lifestyle/meal/食事.md
@@ -40,3 +40,5 @@
 融点は脂より高く、気体は燃えやすい。
 
 殻付きの茹で玉子なら冷蔵庫で3-4日くらいは置いても大丈夫。まぁ、早めに食べた方がいいけど、すぐどうにかなるものではない。
+
+英語だと、食事する行為はdining、朝食や夕食などの一回一回の食事はmealという。
