--- a/shared/trust/期待.md
+++ b/shared/trust/期待.md
@@ -80,3 +80,7 @@ UIに不満を感じたら、何かが「期待通りに動いていない」と
 横断歩道で全ての車が止まると期待するよりも、実際に止まるまで待つタイプ。
 
 期待は一種の緊張につながることがある。
+
+相手に何を期待するか。
+
+相手に何も期待していないと、行為に目的が見えなくて怖い。
