--- a/games/shogi/将棋の学び方.md
+++ b/games/shogi/将棋の学び方.md
@@ -44,6 +44,7 @@
 
 将棋の序盤は駒を取られないように、自分の玉が詰みにくいように逃げたり囲ったりする。いきなり詰みが見えるなら飛ばしてもいい。
 
-将棋はまず一手詰めを見逃さないところから。
-最低でも五手詰めくらいまでは見逃したくない。
-でもまずは一手詰めを見逃さないところから始めて、対戦を始める。
+序盤戦術を学ぶのは手札が増えて楽しいけど、まずは詰みを逃さないのが大事。
+
+序盤はとりあえず右四間飛車から。
+飛車角のラインが一致するので無難に強い。初心者相手だと上から押し潰せる。
