--- a/shared/game/competitive/優位性を示す.md
+++ b/shared/game/competitive/優位性を示す.md
@@ -39,3 +39,8 @@
 
 他人の幸せな話を「マウント」と受け取る人もいる。
 そういう人は人間関係を対戦ゲームだと思っていて足を引っ張るので切った方がいい。
+
+自慢したかったら、自慢と自虐はセットにする。
+自虐で前振りして、ちょっとだけ自慢する。
+
+別に自慢しなくてもなんとかなるので、自慢しなくていいならしない。
