--- a/shared/humor/tips/ユーモアのセンスを磨く.md
+++ b/shared/humor/tips/ユーモアのセンスを磨く.md
@@ -8,3 +8,8 @@
 https://youtu.be/U-NmTnbrh5I?si=R2UD3cmFM5PgtMtO
 
 渋滞にはまって「こんなに長く車に乗れて幸せだなぁ」とか。
+
+どういうことをよく言われるのか、をストックしておいて、あらかじめ面白い返しを考えておく。
+
+どういう指摘が多いか。
+周りからどう言われるか。
