--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -43,3 +43,18 @@ https://youtu.be/h4xYHWFCQ3c?si=xkv2bJAwKu9mGL2s
 笑いは根本的に、肺から息を吐く動作だ。安堵や安心がないと息は吐けない。
 
 笑いはそれ自体が苦痛を緩和する。痛みやストレスを和らげる。
+
+笑わせにいったとき、相手の反応としては、
+
+- 笑う
+- 笑わないように堪える
+- 笑わない
+
+基本的にこの三つ。
+この三つくらいは対応を考えておく。
+
+相手が笑ったら、こっちも笑うのが基本。一緒に笑う。
+
+相手が耐えてたら、追撃するのが基本。「あれ？耐えてません？」みたいなテンプレの追撃でもいい。
+
+相手が笑わなかったら、「ちょっとウケを狙いすぎましたね」とか真剣な顔でメタいことを言うとか、ここが一番困る。相手の反応によっては追撃よりも謝罪の方がいい。
