--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -3,6 +3,7 @@
 関心、注目、注意。
 相手と関わろうとすること。
 目を向けること、目を離さないこと。
+気になること。
 
 利があるか、害があるか、で対象を見る。
 
@@ -243,3 +244,5 @@ careの関心は注意の方が近いかも。mindとも近い。
 
 関心というのは根本的に利害関係があるものに抱くものなので、どちらかというと利用しようと思っている。
 相手が自分に関心があるからと言って喜ぶ感覚がいまいちわからない。
+
+目的がないってことは関心がないってこと。
