--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -630,3 +630,10 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ユーモアがあるせいで、本気でやってるおかしなことをジョークとして受け取ってしまう面もある。
 
 きっと〜に〜があった、という状況の想定がユーモアにつながる。
+
+異常な文脈を共有するのはユーモアの重要なところ。
+
+ただ異常なことが起こるだけでは、むしろ緊張させてしまって笑いにはならない。
+
+おかしさを受け入れる。
+危険そうなものを安全なゾーンに動かす。
