--- a/shared/joke/frameworks/ボケとツッコミ.md
+++ b/shared/joke/frameworks/ボケとツッコミ.md
@@ -48,3 +48,8 @@ https://www.youtube.com/watch?v=fdudK1c6ryM&list=PL_h46lFr5PBiEsF4CAlzHg5RnxGyEm
 異常なフリから異常なオチ、が漫才のボケの基本。
 
 明らかに似てないモノマネして、「なんでこんなに似ないんだろう」から「似せる気ないでしょ」を待つパターン。
+
+芸人さんはそもそも「ボケる人」って前提があるからスムーズにツッコミが入る。
+
+ツッコミが入らないとボケが成立しない。
+ボケそのものは緊張状態を作るだけ。
