--- a/shared/respect/empathy/共感される.md
+++ b/shared/respect/empathy/共感される.md
@@ -14,3 +14,9 @@
 緊張してたら相手にも伝わるので、「なんか緊張してる」って伝えるのも共感されやすい。
 
 共感されるためには、自分から感情を言葉にする。相手はそれをおうむ返しするだけでいい。
+
+共感されたかったら、反感を恐れてはいけない。
+
+共感と反感は切り離せない。
+
+ひろゆきさんは常識的で共感されることしか言ってない。
