--- a/shared/trust/安心感を与える.md
+++ b/shared/trust/安心感を与える.md
@@ -119,3 +119,5 @@ https://diamond.jp/articles/-/118539
 汚れてなくて、前科がありそうな顔でもない。顔が怖かったら笑う。笑っても怖かったらさらに工夫が必要。
 
 堂々として落ち着いている人は相手も落ち着ける。
+
+安心させるというよりは、相手を笑わせる、と思った方がいい。
