--- a/shared/trust/intimacy/清潔感.md
+++ b/shared/trust/intimacy/清潔感.md
@@ -19,7 +19,8 @@
   - 臭い
     - 口が臭い
       - 口が乾燥している
-      - 歯磨きが足りない
+      - 舌が汚れている
+      - 歯が汚れている
       - 内臓から匂っている
     - 体が臭い
       - わきが
