--- a/shared/art/expression/表現.md
+++ b/shared/art/expression/表現.md
@@ -50,3 +50,7 @@ expression もその一部ではある。
 理想の表現と自分に合った表現が一致することはあまりない。
 まず、自分に合った表現は抱えていくしかない。もっともパフォーマンスが高い。
 その上で、理想にも近いちょうどいいところを目指す。
+
+攻撃的、ショッキングな言葉はネガティブな表現。
+
+表現の良し悪しは印象の良し悪しで決まる。
