--- a/shared/execution/delegation/委譲.md
+++ b/shared/execution/delegation/委譲.md
@@ -181,3 +181,6 @@ AIや素人を使うのが苦手なのは、品質を担保するのが苦手な
 というか、委譲の大部分はプログラミング。人間の場合は感情や面子の問題もあるけど、相手の頭の中に実行計画を作るのは変わらない。
 
 AIに正しく委譲できれば、人間の頭でできることはかなり広い範囲がカバーできる。
+
+委譲や指示は確率的に扱う。
+できるだけ確率の高い指示を与えるが、完璧でなければ何度か試行すればいい。
