--- a/shared/execution/programming/プログラム.md
+++ b/shared/execution/programming/プログラム.md
@@ -70,3 +70,7 @@ ProgramはProjectよりも前にある。
 コンピュータプログラムはコンピュータが実行するためにコンピュータが読み取れる言葉で書く。
 
 プログラムの最低条件は、実行可能であることと、計画であること。
+
+どこかで終了しなければ実行計画とは言えない。
+
+委譲先はできるだけ早く結果が得られるほうがいい。それが正常終了でも異常終了でも。
