--- a/shared/execution/prompt/指示.md
+++ b/shared/execution/prompt/指示.md
@@ -82,3 +82,7 @@ https://www.nikkei.com/article/DGXZQOUD198KF0Z11C24A2000000/?n_cid=SNSTW005
 指示や指摘は「自分が」相手にそうしてほしいのであって、世間や第三者に責任をなすりつけてはいけない。
 
 指示する場合はどういう状態にしてほしいのか明確にして、十分な準備期間と予算を用意して、任せた人がちゃんと検証できるようにしないといけない。検証方法がわからない人ならそれも教えるか、わかる人に頼む。
+
+https://share.google/JsLPoIWDrG6Kw7oaD
+
+AIに指示する方法は、人間に指示する方法と同じ。ただ、人間ほど融通が効かないので、ベストプラクティスを目指す。
