--- a/shared/humor/tips/ユーモアとエスプリの違い.md
+++ b/shared/humor/tips/ユーモアとエスプリの違い.md
@@ -17,3 +17,5 @@
 [ユーモア - Wikipedia](https://ja.wikipedia.org/wiki/%E3%83%A6%E3%83%BC%E3%83%A2%E3%82%A2)
 
 皮肉は相手との距離を測ろうとしているものではない。
+
+社会とか政治とか大人の話ができない人を「ぼうや」「お嬢ちゃん」と呼ぶのは攻撃的ユーモア。
