--- a/shared/humor/ユーモアのスタイル.md
+++ b/shared/humor/ユーモアのスタイル.md
@@ -22,12 +22,15 @@
 
 ## 自己高揚的ユーモア
 
+- ネガティブな状況で真逆のことを言う
 - 期待の裏切り
 - 自分の失敗を笑い飛ばす
 - 人生の矛盾を楽しむ
 - セルフツッコミ
 - メタ認知
 - 逆説的な表現
+
+ネガティブな状況で真逆のことを言うのは自己高揚的ユーモアの一番簡単な形。
 
 ## 攻撃的ユーモア
 
