--- a/shared/intelligence/知性.md
+++ b/shared/intelligence/知性.md
@@ -171,3 +171,5 @@ well-known, よく知ること。
 他の人がいちいち覚えてないどうでもいいことを覚えておくだけで記憶力があるように演出できる。
 
 頭がいいというのはより複雑なものをより高速に扱えることがまずベース。ざっくり言えば作業机のでかさと手の速さ。
+
+会話による知性の判定は、聞き手の知識が少ないとついていけないことがある。
