--- a/shared/joke/frameworks/ボケとツッコミ.md
+++ b/shared/joke/frameworks/ボケとツッコミ.md
@@ -53,3 +53,5 @@ https://www.youtube.com/watch?v=fdudK1c6ryM&list=PL_h46lFr5PBiEsF4CAlzHg5RnxGyEm
 
 ツッコミが入らないとボケが成立しない。
 ボケそのものは緊張状態を作るだけ。
+
+ボケといて自己修復するのはセルフツッコミに近い。
