--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -55,3 +55,9 @@ https://x.com/vismoglie/status/2016658222862540809?s=46
 
 「自分も相手の趣味に付き合うから、趣味に付き合ってほしい」って感覚、男にはない。
 趣味は趣味でまた別の友達を作る。誰かをわざわざ付き合わせることは少ない。
+
+男が男を見る時は、
+殴り合いになるかどうか（理性的かどうか）、
+殴り合いになって勝てるかどうか、
+を見てる。
+特に相手が理性的かどうか、獣かどうかが重要。獣は人じゃない。理性的でない言い争いも基本的に避ける。
