--- a/shared/success/成功.md
+++ b/shared/success/成功.md
@@ -410,3 +410,5 @@ learning, thinking, training, なども成功を目的としたもの。
 
 思いがけない利益を成功とは言わない。思い通りになるのが成功。
 ただ、成功だった、と追認することはよくある。
+
+確率的な行為は、試行回数と成功率の掛け合わせで考える。試行回数が簡単に増やせるなら成功率が低くてもいいし、成功率が高いなら試行回数が少なくてもいい。逆に、試行回数が増やせなかったら成功率を上げて、成功率が上がらなかったら試行回数を増やす。どっちも増やせなかったら運任せになる。
