--- a/shared/trust/intimacy/tips/内輪ノリ.md
+++ b/shared/trust/intimacy/tips/内輪ノリ.md
@@ -2,3 +2,9 @@
 
 内輪ノリは友人以外の人が入りづらいので、場としては盛り上がらない。
 まぁ、当人同士は盛り上がったつもりになるので改善されないんだけど。
+
+内輪ノリが良くないのは、会話に入れてない人がつまらないと思ってるのに、自分たちは面白いと思っていて改善されないところ。
+
+内輪ノリとか一部の人だけで盛り上がるのも会話の中で出てくるのは仕方ないけど、短く済ませる。
+
+内輪ノリかどうかは、新規の人に話を振ってみればわかる。「は？」って反応になったら「つまんないやつ」と思わずに、自省するべき。つまんないのは自分たち。
