--- a/shared/action/理性.md
+++ b/shared/action/理性.md
@@ -25,3 +25,6 @@ https://x.com/sogitani_baigie/status/1705729692152758486?s=20
 理性的であれば正しいわけでもない。
 正しい情報と正しい推論がなされるべき。
 理性的にバカな判断をすることもできる。
+
+「女は感情で話す」は、理性でも話せる時にだけ言える。
+知能が低くて理性で話せないなら「女は感情でしか話せない」というべき。
