--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -637,3 +637,8 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 
 おかしさを受け入れる。
 危険そうなものを安全なゾーンに動かす。
+
+ユーモアの基礎は「文脈を共有する」こと。
+文脈を共有できてないと聞き手はユーモアの意味がわからない。文脈とのズレが面白い。
+
+ユーモア自体「そんなわけねぇだろ」ってツッコミを待っているふしもある。
