--- a/shared/lifestyle/clothing/服を買う.md
+++ b/shared/lifestyle/clothing/服を買う.md
@@ -7,3 +7,6 @@
 まぁ、ジーパンにジャケットとかも合うけど、それとは別にスラックスもあると気回しやすい。
 
 ズボンはまず黒から、シャツは白系から揃える。
+
+古着屋はラインナップが変わるので、たまに行くのがいい。
+店によっては服が汚れたり傷んだりしているので、自分で直せるといい。
