--- a/shared/lifestyle/dining/食事.md
+++ b/shared/lifestyle/dining/食事.md
@@ -44,3 +44,5 @@
 殻付きの茹で玉子なら冷蔵庫で3-4日くらいは置いても大丈夫。まぁ、早めに食べた方がいいけど、すぐどうにかなるものではない。
 
 英語だと、食事する行為はdining、朝食や夕食などの一回一回の食事はmealという。
+
+食事はまず食物繊維の多い野菜から食べることで血糖値を上げない。
