--- a/shared/management/performance/効率.md
+++ b/shared/management/performance/効率.md
@@ -1,5 +1,7 @@
 # 効率 Performance
 
+効率。燃費。
+
 効果 (Work) が先、効率 (Performance) が後。
 
 どうやってパフォーマンスを計測するか。
@@ -28,3 +30,5 @@
 人間の場合、効果や効率とは別に、息抜きや楽しみがないと続けられない。
 
 効率がいいのと楽なのは違う。
+
+燃費や効率はworkの文脈。
