--- a/shared/sleep/睡眠.md
+++ b/shared/sleep/睡眠.md
@@ -110,3 +110,5 @@ https://x.com/iwashi86/status/1852527436958962060
 睡眠時に感情と事実を分けている説もある。
 
 https://x.com/yoppymodel/status/2015039710180290599?s=12
+
+睡眠は長さよりもリズムが重要。特に起きる時間を揃える。
