--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -387,3 +387,6 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 
 スキルを身につけるために練習することもあるけど、練習はスキルだけの問題じゃない。
 どちらかというとパフォーマンスとか、信頼性とか。慣れ。
+
+声を柔らかくする練習と声を硬くする練習を同時に進めたら意味がない。
+まず、練習の前に進む方向を決めて、一貫して同じ方に進む。
