--- a/shared/trust/警戒される要素.md
+++ b/shared/trust/警戒される要素.md
@@ -78,3 +78,5 @@
 
 通常、安全な日常空間で人は比較的気を抜いているので、過剰に警戒しているとおかしい。
 何か隠している、追われている、悪いことをしようとしている、という印象を与える。やましさや後ろめたさがある。
+
+相手に聞かせるつもりがない独り言を言っているのはちょっと怪しい。
