--- a/games/人狼.md
+++ b/games/人狼.md
@@ -29,3 +29,5 @@ CO (Coming Out) は自分の役職を明かすこと。
 
 基本的に、騎士がいるなら占い師は名乗り出た方がいい。
 競合がいてもそれはそれで人狼が食べたら他の占い師は吊られるし、競合がいなければ騎士に守られる。
+
+基本的に人狼は不利なので、どこかで大きくリスクを取らないと勝てない。青確の占い師にバレたり、消去法で吊られたりすると負ける。
