--- a/shared/trust/intimacy/tips/共通点を探る.md
+++ b/shared/trust/intimacy/tips/共通点を探る.md
@@ -78,3 +78,5 @@
 抽象的なことが好きだと友達が減るのはわかりすぎる。
 「人を情報量で見ている」
 https://youtube.com/watch?v=LrXHcmdv6hQ&si=eCSqQQ6CvMQ8izds
+
+自分が何を話せるかわかってないと、共通点を探せない。
