--- a/shared/communication/media/language/語彙.md
+++ b/shared/communication/media/language/語彙.md
@@ -16,3 +16,9 @@
 語彙があれば、表現そのものの面白さを追求することもできる。でも表現の面白さは解釈や視点の面白さでもある。
 
 語彙力がないわけではないのに、具体的なことが思いつかない。抽象概念ばっかり考えているのかも。
+
+動物園に行くと、
+フェネックを見て「キツネ」としか言えないとか、
+サギを見て「ニワトリ」としか言えないとか、
+語彙のない子ども、なんなら大人もいる。
+語彙がないとものごとを区別できない。
