--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -1080,3 +1080,10 @@ loveとgoodの概念は近い。
 愛していれば影響を受ける。
 
 愛は当事者意識？
+
+好きは対象に近づこうとすることなので、物理的に近づくために探したり、行き先を予測したり、会えるところに出向いたり、精神的に近づくために振る舞いを真似たり、観察したり、といった行為の集合が「好き」になる。
+
+好きの範囲は人によって違う。
+タコが好きな人もいれば、海の生物が好きな人もいるし、生物全般が好きな人もいる。
+
+対象に近づこうとする行為が愛？
