--- a/shared/people/人を見る要素.md
+++ b/shared/people/人を見る要素.md
@@ -157,3 +157,26 @@
 - 腰が曲がっているか
 - 背が曲がっているか
 - リアクションの大きさ
+
+## その他
+
+実態
+印象
+
+何をしているのか
+何を持っているか
+何を身につけているか
+何を話しているのか
+何を見ているのか
+何を聞いているのか
+何を食べているのか
+どこに住んでいるのか
+どこから来たのか
+どこへ行くのか
+どう感じているのか
+どう思っているのか
+どうやって意思疎通しているのか
+誰といるのか
+どうやってここまで来たのか
+どうしてここにいるのか
+どのように動いているか
