--- a/shared/game/competitive/優位性を示す.md
+++ b/shared/game/competitive/優位性を示す.md
@@ -44,3 +44,6 @@
 自虐で前振りして、ちょっとだけ自慢する。
 
 別に自慢しなくてもなんとかなるので、自慢しなくていいならしない。
+
+自慢話の問題は、頼りにされたいと思っているのに、実際に相手に恩恵を与えられていないところと、長いところ。
+頼りにされたいなら、話自体は短く済ませて、実際に相手の力になってやるだけで良い。
