--- a/shared/game/competitive/優位性.md
+++ b/shared/game/competitive/優位性.md
@@ -1,11 +1,29 @@
+# Advantage
+
+優位性。競争優位性。強み。有利。
+
 - 肉体的
   - 背が高い
-  - 筋肉がついている
   - 足が速い
+  - 体力がある
+  - 筋力がある
+  - 病気になりにくい
 - 精神的
   - 恐怖を与える
   - 弱みを握っている
   - 驚かせる
   - 笑わせる
+  - 壊れにくい
+  - 変化に適応しやすい
+    - 変更しやすい
 - 経済的
   - 資本が多い
+  - 市場投入が早い
+  - 模倣しにくい
+
+市場投入が早いほど競争優位性は高まる。
+
+製品の変更容易性が競争優位性を高める話
+[コード品質はやはりビジネスに影響を与える - mtx2s’s blog](https://mtx2s.hatenablog.com/entry/2023/04/26/230917)
+
+模倣しやすいもの、簡単に獲得できるものは競争相手が増えてシェアの奪い合いになりやすい。
