--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -170,3 +170,10 @@ pleasure.
 カップルの女性は彼氏を褒める。彼氏は彼氏を褒める。
 
 褒めるというよりは感謝を伝えるのが大事。
+
+褒める行為は評価でもあるので、扱いは慎重に。
+
+人が変えにくいものはコンプレックスになりやすいので、基本的に言及しない方がいい。
+顔や骨格、身長、年齢、学歴、など。
+それに努力しない部分でもあるので、あまり褒められても嬉しくない。
+努力で変えられるところの方が無難。
