--- a/shared/society/謝意.md
+++ b/shared/society/謝意.md
@@ -43,3 +43,6 @@
 誰かのことを「プライドが高い」とか「マウントしないで」とかいう人は基本的に他責の人。
 
 謝る行為は、害を与えないように気を遣っているように見えて安心しやすい。尊重しようとしている。
+
+感謝しても、評価や比較はしない。
+「今後もあなたと付き合っていきたい」ということを示す。
