--- a/shared/assertion/自己開示.md
+++ b/shared/assertion/自己開示.md
@@ -52,3 +52,8 @@
 何が良いか考えずに自分勝手に振る舞うのは自己開示とはいえない。自分の考え方が正しく反映されていない。
 
 自己開示は相手に話を振るための前座でしかない。
+
+自己開示でもユーモアが重要。
+自分の言いたいことを言った上で、受け入れてもらう。
+
+自己開示の前に自己認識が足りない。
