--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -246,3 +246,9 @@ careの関心は注意の方が近いかも。mindとも近い。
 相手が自分に関心があるからと言って喜ぶ感覚がいまいちわからない。
 
 目的がないってことは関心がないってこと。
+
+興味がなくても関心は持つ。
+
+関わりがあるなら、関心は持つ以外ない。
+
+政治や社会に無関心でいられても、無関係ではいられない。関係があれば関心は持った方がいい。
