--- a/shared/hobby/こだわり.md
+++ b/shared/hobby/こだわり.md
@@ -13,3 +13,8 @@
 こだわりが強い人は気分屋が多い。
 
 特殊なこだわりが強い人は別に悪いことではないんだけど理解されにくい。尊重されなくて怒ることがあるとさらに孤立しやすい。キツイ性癖とか。
+
+こだわりはそもそも関心でもある。
+特に大事にしているもの。
+
+あまりこだわりがない人でも、こだわりの範囲が狭いだけってこともある。
