--- a/shared/knowledge/知識.md
+++ b/shared/knowledge/知識.md
@@ -191,3 +191,6 @@
 考えが散逸しているとまだ知識として使えない。
 考えや情報を体系化、構造化して使いやすくしたのが知識。
 「使う」ためには目的意識が必要。何に使うかで、どのように構造化するかも変わってくる。
+
+知識からその場で考えて何かしようとすると時間がかかる。
+知識を学んだら、それを実用レベルで使えるように慣れないといけない。
