--- a/shared/trust/creditability/信用.md
+++ b/shared/trust/creditability/信用.md
@@ -136,3 +136,10 @@
 『水属性の魔法使い』で「都市の食料を全て買い占めた」って描写が出てきたけど、商売というのは単に金を積めば成立するものでもない。いきなり誰かが買い占めるということは、元々の売り先に対して信用を失うということでもある。
 
 期待に応え続けることで信用になる。「次もいいだろう」と言う期待。
+
+実際にプレゼントとか、楽しい会話をするのは恩恵の実績。信用につながる。
+
+初対面で楽しく会話できていれば信用になる。
+
+信用は、積み重ねるのに時間がかかる。
+でも積み重ねているうちにreliabilityやintimacyも伸びるものではある。
