--- a/shared/trust/intimacy/tips/共通点を探る.md
+++ b/shared/trust/intimacy/tips/共通点を探る.md
@@ -80,3 +80,11 @@
 https://youtube.com/watch?v=LrXHcmdv6hQ&si=eCSqQQ6CvMQ8izds
 
 自分が何を話せるかわかってないと、共通点を探せない。
+
+共通点を見つけるには、自己認識が必要。
+自己開示すれば相手から見つけてくれるかもしれない。
+
+共通点をどこで見つけるか。
+
+一般的には共通点を探した方が仲良くなりやすいとされているが、相違点の方が好きな人もいる。
+ただ、相違点が好きな人でも、趣味が合えば同じ時間を過ごしやすいという面はある。
