--- a/shared/hobby/こだわり.md
+++ b/shared/hobby/こだわり.md
@@ -18,3 +18,7 @@
 特に大事にしているもの。
 
 あまりこだわりがない人でも、こだわりの範囲が狭いだけってこともある。
+
+こだわりがあっても、言葉になってないことはある。
+そうなると直接聞いても答えられない。
+「こういう時、どうする？」みたいに具体的な状況の判断を問うことで考えさせる。
