--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -106,3 +106,5 @@
 https://youtu.be/qAr_3B5W3fg?si=LYJgy8bBey3g-BF2
 
 恋人に自分を一番好きでいてほしいのは、自信がないのかも。
+
+一緒に子供を作って育ててないなら恋人にはなってないけど、一応お互いがいずれは恋人にしたいと思っているなら恋愛。結果的に別れても。
