--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -303,3 +303,32 @@
 友人がたくさんいると、急に誘ってもスケジュールが合いやすい。
 
 友人がいると、人を紹介してもらって、信頼を借用できる。
+
+友人でない人は、
+
+- 学校や職場などの「場所」を離れると急に関わらなくなる（関係が「場所」に紐づいている）
+- 共通の友人と離れると、急に関わらなくなる（関係が「第三者」に紐づいている）
+
+友人というのは、人と関わる「場所」や「第三者」に紐づいていない。
+その場所を離れても続く関係があるといい、と考えるなら友人がいてもいい。
+
+「場所」に縛られていない関係だからこそ、関係を維持するにはお互いの意志が必要。
+放っておくと自然消滅する。
+
+友人と喧嘩別れしても、もう「場所」と関わってないなら関係ない。
+まだ「場所」と関わっていたら、友人との関係によってその「場所」でも気まずい思いをするかも。そうなると友人というよりは利害関係も含まれてしまう。
+「場所」を離れると気になって初めて、本当に友人かどうか決まるのかも。
+
+「場所」と紐づいているなら、友人というより知人なのかも。
+その「場所」の外でも関わるのが友人。
+
+友人同士では役割分担が決まっていない。
+
+友人同士には目的がない。しいていえば、一緒にいることが目的。
+
+友人を評価したり比較したりするのは避ける。
+
+学校や職場などの「場所」では、自分の意思に関わらず相手もその場にいたら関わることになる。
+
+最低でも、自分が相手と一緒にいたいと思わないと、相手も自分と一緒にいたいとは思いづらい。
+ただ、十分条件ではない。自分が相手と一緒にいたいと思っても、応えてくれるとは限らない。
