--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -332,3 +332,15 @@
 
 最低でも、自分が相手と一緒にいたいと思わないと、相手も自分と一緒にいたいとは思いづらい。
 ただ、十分条件ではない。自分が相手と一緒にいたいと思っても、応えてくれるとは限らない。
+
+男友達は趣味が合って一緒に遊ぶくらいで十分なのかも。
+
+個別の連絡先を教える。
+LINEよりインスタの方がTwitter的な広範囲の近況報告もできて接触しやすいかも。
+
+雑多な友人を作っても、自分の方が毎週会いたいと思わない。
+
+どれくらいの頻度でその人に会いたいかによって、グラデーションがある。
+会いたい頻度が多いほど、親しくなりたいと思っていい。
+
+実際には相手の都合もあるのでそんなに頻繁に会えないこともある。
