--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -201,3 +201,5 @@
 
 謝るとむしろ気を遣わせてしまう場面もある。
 「すみません！」と、できればその場で、さらっと謝って話題を変えるとか、謝る代わりに日頃の感謝を示すこともできる。
+
+会話に意識を割きすぎていると疲れるので、会話はあまり頭を使わなくても回せるようにする。
