--- a/shared/trust/tips/心理的安全性.md
+++ b/shared/trust/tips/心理的安全性.md
@@ -1,8 +1,8 @@
 # 心理的安全性
 
 安心感。
+快いというよりは、怖くない。
 
-心理的安全性というのは、信頼関係の言い換えでしかない。
 失敗しても責められないとか、挑戦が良い結果に繋がること。
 
 組織の中でお互いの期待や要求を率直に開示できる度合い。
@@ -62,3 +62,5 @@ https://studyhacker.net/piotr-feliks-grzywacz-interview03
 上司は「失敗したら俺のせいにしろ」と言わなければならない。責任を手放せば挑戦できる。心理的安全性を高める。もっと言うと同僚がお互いに同じことを言えれば一番いい。
 
 ラポールとは、お互いの心が通じ合い、穏やかな気持ちで、リラックスして相手の言葉を受け入れられる関係性のこと。
+
+心理的安全性が低いのは、「他人を警戒している」状態になるので、周囲から怪しいと思われやすい。
