--- a/shared/management/マネジメント.md
+++ b/shared/management/マネジメント.md
@@ -437,3 +437,17 @@ maintenanceやfinanceも含む。
 マネジメントはゲームの要素があるけど、ゲームのように「うまくやる」ことを目指すよりは「目の前の問題をなんとかする」のが本領。うまくやれたらなおいい、くらいの気持ち。
 
 mngやacvも基本的に実行が基礎にある。常に実行を伴う。伴わないといけない。
+
+マネジメントの「うまくやる」は効率じゃなくて、成功の話。効率は悪くても成功したらうまくいっている。
+
+- 早く始める
+- 早く終わらせる（速く処理する）
+- 長く続ける
+
+まずこの辺りかも。
+早く終わらせるべきなのか、長く続けるべきなのか、によっても違う。
+
+- 手待ちを減らす（終わる目処が立つまで始めない）
+- 不良品を作らない（異常があったらすぐ止める）
+
+この辺りは効率を求める場合。必須とは言えない。executionかperformanceにあってもいいかも。
