--- a/shared/science/疑問.md
+++ b/shared/science/疑問.md
@@ -47,3 +47,24 @@ Doubtは疑問。「こうじゃないと思う」こと。
   - どうなりたい
 
 そこまで確かさを絞る必要があるかどうか。
+
+深掘りモードと揺さぶりモード。
+考えを知るための問いと、考えを変えるための問い。
+https://x.com/yukianzai/status/2022970782205547004?s=12
+
+深掘り:
+
+- 素人質問: 当たり前を確認する
+- こだわりのきっかけを探る
+- 美意識を探る
+  - 正しさ
+  - 良さ
+  - 美しさ
+
+揺さぶり:
+
+- 言い換え
+- もしも話
+  - 本当に必要か
+  - 何かを外してみるとどうなるか
+  - 何かを足してみるとどうなるか
