--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -309,3 +309,12 @@ https://www.total-marriage.com/column/1644/
 丁寧すぎる言葉遣いはネガティブポライトネスで、続けていると親しくならない。ポジティブとのバランスが取れない。
 
 親しくなるというのは、射線が曲がった銃を扱うのと一緒。癖を知って使いこなす。
+
+礼儀というのは、親しくなる、って感覚を基礎にしている。もちろん形だけ礼儀を身につけることはできるけど、細かいところでボロが出やすい。
+
+会話の目的として、親しくなりたい、ってとこがあるかも。
+
+親しくなるのは、一緒にいるため。
+一緒に何かするでもいい。
+
+学校や職場、サークルのように、一緒にいるための場にいると、親しくなくても一緒にいられる。でも、長期的に考えるとその場は基本的になくなる。その後も一緒にいるには、親しくなるしかない。
