--- a/shared/care/tips/理解を示す.md
+++ b/shared/care/tips/理解を示す.md
@@ -10,3 +10,6 @@
 あと単純に責任を押し付けている面もある。
 
 仕事を任せるときは細かい判断を任せる。
+
+何かを理解するということは、どんな刺激にどんな反応をするのか、を知ること。
+こだわりや価値観を知るのは、判断の基準を知るため。判断の基準を知れば、個別の判断を推測しやすくなる。でも重要なのは個別の反応を予測できること。
