--- a/shared/humor/おしゃれ.md
+++ b/shared/humor/おしゃれ.md
@@ -40,3 +40,5 @@
 
 おしゃれは自分を表現するツール。
 キャラクターやライフスタイルと合っていないと着せられた感がある。
+
+こだわりがおしゃれにつながるけど、こだわりがあっても雑多で洗練されてない、統一されてないとおしゃれに見えない。受け入れられない。この辺りも自己開示と同じ。
