--- a/shared/lifestyle/clothing/服を買う.md
+++ b/shared/lifestyle/clothing/服を買う.md
@@ -10,3 +10,11 @@
 
 古着屋はラインナップが変わるので、たまに行くのがいい。
 店によっては服が汚れたり傷んだりしているので、自分で直せるといい。
+
+色物を買う時は同じトーンのセットで買うか、白黒に合わせて原色に近いトーンから買う。基本はセットで買った方がいい。
+
+色物を買う順序:
+
+1. 白黒の服
+2. 黒に合う暗いトーンの服
+3. 合わせることを前提にトーンを揃えた服
