--- a/shared/trust/intimacy/tips/共通点を探る.md
+++ b/shared/trust/intimacy/tips/共通点を探る.md
@@ -88,3 +88,6 @@ https://youtube.com/watch?v=LrXHcmdv6hQ&si=eCSqQQ6CvMQ8izds
 
 一般的には共通点を探した方が仲良くなりやすいとされているが、相違点の方が好きな人もいる。
 ただ、相違点が好きな人でも、趣味が合えば同じ時間を過ごしやすいという面はある。
+
+一般的は共通点を探すのが好まれる。特に関係の初期。
+創造性や開放性が高い人は共通点より相違点の方が気になる。
