--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -58,3 +58,6 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 完全に理解することをつまらないと思っている節もある。
 
 基礎知識があると知らないものもそれに当てはめて理解しやすい。思考の時間がかかるので、最終的には反射的に理解できるまで練習したほうがいい。
+
+何かを理解するということは、どんな刺激にどんな反応をするのか、を知ること。
+こだわりや価値観を知るのは、判断の基準を知るため。判断の基準を知れば、個別の判断を推測しやすくなる。でも重要なのは個別の反応を予測できること。
