--- a/shared/hobby/こだわり.md
+++ b/shared/hobby/こだわり.md
@@ -22,3 +22,7 @@
 こだわりがあっても、言葉になってないことはある。
 そうなると直接聞いても答えられない。
 「こういう時、どうする？」みたいに具体的な状況の判断を問うことで考えさせる。
+
+他との違いはその人がこだわっているところでもある。
+
+こだわり自体はhobbyよりcareかも。
