--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -642,3 +642,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 文脈を共有できてないと聞き手はユーモアの意味がわからない。文脈とのズレが面白い。
 
 ユーモア自体「そんなわけねぇだろ」ってツッコミを待っているふしもある。
+
+ピンチをチャンスに変える。
