--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -15,6 +15,12 @@
 - 愛は行為
 - 愛はポジティブなもの
 
+## 愛でないもの
+
+- 思考
+- 否定
+- 減点方式
+
 ## その他
 
 愛とは、対象から影響を受けることに喜びを覚えること。
@@ -1089,3 +1095,6 @@ loveとgoodの概念は近い。
 対象に近づこうとする行為が愛？
 
 一緒にいたいと思うのは愛ではない。
+
+減点方式の採点は愛がない。
+愛は加点方式。
