--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -179,3 +179,7 @@ pleasure.
 努力で変えられるところの方が無難。
 
 相手が褒めたことは相手が気にしていることでもあるので、近いところを褒められるといい。
+
+褒めるまでに間が開くとあえて探して言ったみたいに感じやすい。思い付きでパッと言ったほうがいい。
+
+「先輩がトップセールスなのわかる気がします」みたいな褒め方をすると、理由が聞きたくなる。
