--- a/shared/people/性格.md
+++ b/shared/people/性格.md
@@ -48,3 +48,7 @@
 人に好かれる性格、
 仕事ができる性格、
 クリエイティブな性格、みたいに性格はいろいろあるので、どういう属性がその特徴を決定づけるのか、が重要。
+
+人間性。
+
+配信とかテレビの人って檻の中のさるみたいなもので、人間性や性格の良さはあまり考慮しなくていい。
