--- a/shared/care/responsibility/責任.md
+++ b/shared/care/responsibility/責任.md
@@ -141,3 +141,5 @@ https://youtu.be/TH0ZiPNkddQ?si=ejD2IH1dFfaVBjmv
 他人のことは自分に関係ないのでどうとでも言える。
 
 基本的に人間は責任を回避しようとする。特に女性。例えば「察してほしい」のはお願いすることで責任が生じるから。
+
+失敗しても言い訳しないのは良し悪し。言い訳しないと改善もしない。ただ、的外れな言い訳は良くない。あるいは、失敗する前に言ったほうがいい。これは失敗するから覚悟しとけ、という。
