--- a/shared/game/theory/勝利条件.md
+++ b/shared/game/theory/勝利条件.md
@@ -1,3 +1,13 @@
 勝負によって「勝ち」の定義は違う。
 
 勝手にルールを勘違いして「勝った」と思うのは勝手だけど、ゲームでは負けている。
+
+どうやって勝つか。
+
+どうやって勝つか、をパターン認識する。
+
+どうやって勝つか、を定める。
+
+自分の行動がゲームの結果に影響しているかどうかを逐一検証する。
+
+対戦的な勝ち負けというよりは、満足条件。
