--- a/shared/mood/happy/praise/tips/人を褒める.md
+++ b/shared/mood/happy/praise/tips/人を褒める.md
@@ -40,3 +40,31 @@
 曲とかアニメとか好きなものはセンスを褒める。
 
 褒められたら、相手も同じ内容で褒められたいと思っている。すぐだとわざとらしいかもしれないので、覚えておいて機会があったら同じように褒める。
+
+褒めるところ
+
+言葉遣いが綺麗
+丁寧
+手間をかけている
+センスが良い
+スキルがある
+成長している
+続けている
+始めている
+好奇心がある
+なんでもやってみる
+トラブルがあっても落ち着いている
+前向きで空気が明るくなる
+
+- 信頼性
+- 精神性
+  - 意志
+- 他者への配慮
+  - 礼儀
+    - 表現や作法
+- 他者への貢献
+- 機能性
+  - 技能
+  - 知性や思考
+- 発展性
+  - 成長や変化
