--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -183,3 +183,5 @@ pleasure.
 褒めるまでに間が開くとあえて探して言ったみたいに感じやすい。思い付きでパッと言ったほうがいい。
 
 「先輩がトップセールスなのわかる気がします」みたいな褒め方をすると、理由が聞きたくなる。
+
+褒めるのはいいけど、評価してはいけない。
