--- a/shared/trust/intimacy/tips/共通点を探る.md
+++ b/shared/trust/intimacy/tips/共通点を探る.md
@@ -91,3 +91,6 @@ https://youtube.com/watch?v=LrXHcmdv6hQ&si=eCSqQQ6CvMQ8izds
 
 一般的は共通点を探すのが好まれる。特に関係の初期。
 創造性や開放性が高い人は共通点より相違点の方が気になる。
+
+共通点を探しやすいポイントを考える。
+くせとか、習慣とか、休日の過ごし方とか、嫌いなものとか。
