--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -85,3 +85,5 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 - どうやって既存顧客を維持するか
 
 どんなビジネスも最初はやはり何らかのスキルから始まる。組織を動かすスキルはその後。
+
+少ない元手で実行できるビジネスのアイデアを見つけて、とにかく始める。
