--- a/shared/joke/frameworks/ボケとツッコミ.md
+++ b/shared/joke/frameworks/ボケとツッコミ.md
@@ -55,3 +55,9 @@ https://www.youtube.com/watch?v=fdudK1c6ryM&list=PL_h46lFr5PBiEsF4CAlzHg5RnxGyEm
 ボケそのものは緊張状態を作るだけ。
 
 ボケといて自己修復するのはセルフツッコミに近い。
+
+ボケとしてのツッコミもある。
+
+ツッコミによってボケを分類できるかも。
+
+「そんなことないだろ」
