--- a/shared/achievement/原因を探る.md
+++ b/shared/achievement/原因を探る.md
@@ -13,3 +13,6 @@
    確信があるならそれを試してもいいけど、それがなければまずは範囲を大きく絞れるものから試すのが大事。
 
 原因がわからなかったら、原因を検証する方法をいくつも書き出して、片っ端から試す。
+
+問題の原因を探っても、自分が介入できないと意味がない。
+いくつもある原因の中から、自分が介入できる箇所を見つけて干渉するのが重要。
