--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -344,3 +344,7 @@ LINEよりインスタの方がTwitter的な広範囲の近況報告もできて
 会いたい頻度が多いほど、親しくなりたいと思っていい。
 
 実際には相手の都合もあるのでそんなに頻繁に会えないこともある。
+
+ポジティブなことを一緒に喜んでくれるのが友人の最低条件。嫉妬や無関心は特に無し。
+
+友情を維持するには努力が必要。
