--- a/shared/job/working/ways/業務委託.md
+++ b/shared/job/working/ways/業務委託.md
@@ -12,3 +12,5 @@
 スケジュールが詰まっているとビジネスの機会も逃しやすい。
 
 好きな格好をしたいなら業務委託よりは正社員の方がいい。正社員になったら簡単には辞めさせられない。
+
+業務委託は悪いことじゃないけど、仲介を挟むのはコスパが悪い。正社員と違ってなんの保証もないのに搾取されるだけ。とはいえ金額による。
