--- a/shared/love/人を選ぶ.md
+++ b/shared/love/人を選ぶ.md
@@ -1,3 +1,21 @@
+## Good
+
+- 人の幸せを一緒に喜ぶ
+
+## Bad
+
+- 人の幸せに嫉妬する
+- 人の幸せに無関心
+- 店員への態度が悪い
+- くちゃくちゃと口を開けて噛む
+- 爪を噛む
+- ケチ
+- 自慢話
+- 人前でスマホをずっと見ている
+- セクハラ
+
+## その他
+
 愛は有限である。
 
 極端に気を遣わないといけない人は切るのも選択肢の一つ。
@@ -15,12 +33,4 @@
 
 ただ気持ちよく付き合えるだけが良いわけではない。
 
-良くない態度:
-
-- 店員への態度が悪い
-- くちゃくちゃと口を開けて噛む
-- 爪を噛む
-- ケチ
-- 自慢話
-- 人前でスマホをずっと見ている
-- セクハラ
+ポジティブなことを一緒に喜んでくれるのが友人の最低条件。嫉妬や無関心は特に無し。
