--- a/shared/trust/intimacy/tips/友人を選ぶ.md
+++ b/shared/trust/intimacy/tips/友人を選ぶ.md
@@ -1,3 +1,6 @@
+友人は量よりも質。
+ただ、一旦付き合ってみないと質がわからない。親しくなってから選別する。
+
 知人の段階で、友人にしたい人を選ぶためにある程度踏み込んだ会話が必要。
 
 友人としては仕事や政治よりも穏やかで明るいとか、精神が安定しているとか、付き合いやすさが大事。
