--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -161,3 +161,5 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 narrativeというと、talkよりも筋道のある物語の構造や様式に焦点を当てている。
 
 物語には人の想いがある。ただの歴史ではない。
+
+物語では、奇妙な展開というよりも、強引な展開がたまにある。読者の予想を裏切るほどではないけど、物語でなければあり得ない展開。護衛が無能すぎて重要人物が攫われるとか。読者としては強引すぎると冷めるけど、展開の都合で受け入れている面もある。
