--- a/shared/thinking/tips/意見を集める.md
+++ b/shared/thinking/tips/意見を集める.md
@@ -40,3 +40,6 @@ https://coach.co.jp/view/20191204.html
 
 作品の感想は数が重要で、好評も悪評もあっていい。話題になったこととは別に、それだけ多くの人を動かしたということが重要。話題になったのはその過程でしかない。多くの人を動かす作品でも人目に触れないと影響を与えない。
 普通の人は悪評をわざわざ口にしない。それでももし悪評が多かったとしたら、受け取りきれなくて口に出さないといけない何かがあったということ。作品として間違いではない。
+
+意見は総数じゃなくて割合が大事。割合が少ない意見を聞いても意味ない。
+さらに、割合も全人類じゃなくて、重要な人の分だけでいい。ターゲットから外れている人は割合に入らない。
