--- a/shared/community/価値観の違い.md
+++ b/shared/community/価値観の違い.md
@@ -22,3 +22,6 @@ Win Win の関係の中でもさらにビジネスとコミュニティに分か
 
 「価値観は「すり合わせる」ものではなく「広げる」ものだ。」
 https://x.com/minatoku_genkai/status/2019275397234586040?s=12
+
+価値観のズレは解消するよりも残しておく方がいいけど、難しい。
+「未完成のものを完成させるのが好きで、完成したら興味をなくす」タイプと「完成したものが好きで、未完成のものを避ける」タイプはズレが大きいかも。
