--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -132,3 +132,7 @@ Know 知る
 むしろ確実にするためにさっさと決めて動きださないといけない。
 
 「選べない者は結局全てを失う」（DaiGo）
+
+不完全な情報でも意思決定できる。
+
+意思決定はデータを元にする判断と、不完全なデータを使った決断があると考える場合もあるが、まぁデータがあってもなくても判断って言い方でいいと思う。そもそもデータは不完全。
