--- a/shared/friend/友人.md
+++ b/shared/friend/友人.md
@@ -348,3 +348,8 @@ LINEよりインスタの方がTwitter的な広範囲の近況報告もできて
 ポジティブなことを一緒に喜んでくれるのが友人の最低条件。嫉妬や無関心は特に無し。
 
 友情を維持するには努力が必要。
+
+友人を推しにする。
+友人が評価されるのを誰よりも喜ぶ。
+
+情報が欲しいだけなら友人より知人でいい。
