--- a/shared/sex/tips/性差.md
+++ b/shared/sex/tips/性差.md
@@ -61,3 +61,5 @@ https://x.com/vismoglie/status/2016658222862540809?s=46
 殴り合いになって勝てるかどうか、
 を見てる。
 特に相手が理性的かどうか、獣かどうかが重要。獣は人じゃない。理性的でない言い争いも基本的に避ける。
+
+今のところ、生殖のための性差は男女でしか埋められない。
