--- a/shared/sex/性欲.md
+++ b/shared/sex/性欲.md
@@ -39,3 +39,6 @@
 「男は脳が1つで玉が2つだからいつも3:0の多数決で煩悩が理性を上回ってしまう」は草。
 
 性欲って生物としては子ども作りたいってことなので、性欲が強い人じゃないとあまり恋愛する意味もないし、そういう男は浮気するってのもある。そういう意味ではやっぱお見合いで結婚する時代が正しかった説はある。
+
+友人と恋人の境界は性的興奮だ。
+性的興奮を覚えるなら友人でいるのは難しいかも。
