--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -162,3 +162,12 @@
 
 女性は妊娠がある以上、仕事を続けたりキャリアを積むのが難しい。
 女性が仕事を続ければ収入が増えて生活が楽になるので、パートナーであればサポートするべき。
+
+愛されたいだけなら、別に恋人である必要はない。
+
+恋人と友人は別の軸。両立もできる。
+
+恋人が欲しかったら友人を作る。
+友人が欲しかったら知人を作る。
+知人が欲しかったら、知らない人に声をかける。
+困ってるとか、知人の知人とか、きっかけがあると声をかけやすい。
