--- a/shared/society/人間関係.md
+++ b/shared/society/人間関係.md
@@ -93,3 +93,6 @@ Personal vs Social
 たとえば共通点よりも相違点こそが価値だと考える人は、共通点の話ばかりする人と付き合っても仕方ないので、相違点の話をすることで関係を切っていくのが最適になる。
 
 自分が性格よくいられる人と付き合うのは大事。
+
+交友関係は、お互いを補い合うためにあるのかも。
+知人は情報を、友人は能力を、恋人は性差を補い合っている。
