--- a/shared/friend/友人を選ぶ.md
+++ b/shared/friend/友人を選ぶ.md
@@ -11,3 +11,6 @@
 
 敵に対して潰しに行くのは誰でも同じなので、対人関係で重要なのは味方にどういう態度を取るか。敵への態度は気にしなくていい。
 しかし、余計な敵を作るとか、味方にも態度が悪い人は排除したほうがいい。
+
+助け合えない人とは別れよう。
+友人にはなれなかった、ということだ。
