--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -171,3 +171,6 @@
 友人が欲しかったら知人を作る。
 知人が欲しかったら、知らない人に声をかける。
 困ってるとか、知人の知人とか、きっかけがあると声をかけやすい。
+
+恋人になりたいなら、初めから恋人になるために近づいていい。
+ただ、友人の中から恋人になりたいと思う人ができるかもしれないし、友人を作るためのスキルは恋人に対しても役に立つ。友人付き合いは無駄にならない。
