--- a/shared/commerce/pricing/価格設定.md
+++ b/shared/commerce/pricing/価格設定.md
@@ -79,3 +79,7 @@
 
 持ち帰り用の紙袋やビニール袋に追加料金を取ると、安っぽい店だと思われる。
 コンビニとか初めから安っぽい店でやるなら単に買い控えが起きるだけだが、高い店でやるとブランドの問題になる。
+
+需要が多かったら価格を上げて需要を下げる。特にリソースが決まっていて全部の仕事は受けられない時。
+
+価格を上げると需要が下がる。
