--- a/shared/communication/frameworks/emotion/examples/怒りの表現.md
+++ b/shared/communication/frameworks/emotion/examples/怒りの表現.md
@@ -32,3 +32,5 @@ https://x.com/genmeisui/status/1804507285794038152?s=46
 苛立ちは怒っているというより不快？でも単に不快なら表現する必要もないから怒りかも。
 
 怒るというのはその場で相手の行動を止めるのには使えるけど、あとから怒るのは何の意味もない。
+
+大声出して必死に怒ってる人って普通に考えて面白い。笑いを堪えるほうが難しい。ビビらなくていい。
