--- a/shared/execution/delegation/委譲.md
+++ b/shared/execution/delegation/委譲.md
@@ -184,3 +184,6 @@ AIに正しく委譲できれば、人間の頭でできることはかなり広
 
 委譲や指示は確率的に扱う。
 できるだけ確率の高い指示を与えるが、完璧でなければ何度か試行すればいい。
+
+依頼は間接的なほうがいいんだけど、「寒いから窓閉めてほしいかも」みたいな言い方だと中途半端。直接的に言ってるわりに責任から逃げている。
+単に「ちょっと寒くない？」でいい。なんなら何も言わずに上着を着るだけでもいい。その上で、意図を汲んでくれたら感謝を伝える。「気がきくなぁ。ありがとう」みたいに。
