--- a/shared/finance/金儲け.md
+++ b/shared/finance/金儲け.md
@@ -5,3 +5,7 @@
 
 別に誰からも評価されないし金にもならないけどずっと続けていること、ライフワークがあれば人生は豊かになる。でも全く稼げないと生活できなくて困る。
 ライフワークを仕事にするか、他の仕事を適当にやるか。
+
+お金はあったほうが便利だけど、稼ぐためのコストとの噛み合い。
+
+金だけ稼いで使う暇もないと、パーっと使って発散するようになる人がいる。わざわざ必死に稼いでドブに捨てる。
