--- a/shared/training/努力.md
+++ b/shared/training/努力.md
@@ -76,3 +76,6 @@ https://www.youtube.com/watch?v=rTFLOSI5ZNI
 「努力は必ず報われる。報われない努力があるとすればそれはまだ努力とは言えない。」 （王貞治）
 
 強い人のそばにいるとそれが基準になるので、強い人と同じくらい練習する。いや、そばにいるためにはするしかないというべきか。しないならついていけない。まぁ、しても強さでついていけるとは限らないけど、根性を見せれば休憩中くらいは近くにいられる。
+
+努力して何かしてるやつは息するように同じことをしてるやつに一生敵わない。
+努力している、というのは、努力しないとできないだけ。
