--- a/shared/friend/友人.md
+++ b/shared/friend/友人.md
@@ -355,3 +355,5 @@ LINEよりインスタの方がTwitter的な広範囲の近況報告もできて
 情報が欲しいだけなら友人より知人でいい。
 
 正直、家族と仲が良かったら家族と趣味を共有したり出かけたりすることもできるので、友人の優先度が高くない。
+
+勉強したり運動したり、面倒なことを一緒にできる友人がいると続けやすい。
