--- a/shared/politics/面子.md
+++ b/shared/politics/面子.md
@@ -11,3 +11,7 @@
 他人を鏡にして自分を自分だと確認する人もいる。対外的な面子。
 
 「それが本当に椎子さんかはわかりませんけれど、椎子さんはそういう自分を見せたいと考えてそう生きたんです。」『がっこうぐらし』
+
+- 時間をかけたこと
+  - 努力していること
+  - 意識していること
