--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -69,3 +69,7 @@
 品があるというのは、実家が良い可能性が高く見える。上流階級に見える。結局。
 
 実家が良家ってわけでもないのに品がいいのはわざと作ってるので裏があると思ったほうがいいんじゃないか、
+
+英語のfineは、細かいところまで行き渡っている、満たされている感じ。十分。でも「そこそこ」の意味で使うこともある。
+
+言葉や行為の攻撃力を判断する。
