--- a/shared/finance/金儲け.md
+++ b/shared/finance/金儲け.md
@@ -9,3 +9,7 @@
 お金はあったほうが便利だけど、稼ぐためのコストとの噛み合い。
 
 金だけ稼いで使う暇もないと、パーっと使って発散するようになる人がいる。わざわざ必死に稼いでドブに捨てる。
+
+物理的に仕事の量に限界がある仕事は儲けづらい。
+機械やコンピュータに仕事を渡せるとスケールする。
+多少非効率でもスケールできることは重要。
