--- a/shared/politics/面子.md
+++ b/shared/politics/面子.md
@@ -2,6 +2,9 @@
 
 面子。自己イメージ。
 
+- こう思われたい
+- こう思われたくない
+
 自分や相手の面子を守るのが政治の中核かも。
 
 面子は社会的信用というよりも、自己イメージの問題。
@@ -15,3 +18,19 @@
 - 時間をかけたこと
   - 努力していること
   - 意識していること
+
+ある種のプライド。
+
+自分の面子は投げ捨てた方が、相手としては付き合いやすい。
+
+面子が重い人は付き合いづらい。地雷が多い。
+
+時間をかけたことには面子が生じやすい。
+
+面子があるところは褒めて、面子がないところはいじる。
+褒めるだけじゃなくて、どうでもいいところをいじることによって、「あなたの大事にしていることをよく分かっている」と示す。
+
+面子はある種の関心。こだわり。
+
+面子があるところをいじると面子を潰してしまう。
+面子がないところを褒めても響かない。
