--- a/shared/trust/intimacy/tips/共通点を探る.md
+++ b/shared/trust/intimacy/tips/共通点を探る.md
@@ -94,3 +94,5 @@ https://youtube.com/watch?v=LrXHcmdv6hQ&si=eCSqQQ6CvMQ8izds
 
 共通点を探しやすいポイントを考える。
 くせとか、習慣とか、休日の過ごし方とか、嫌いなものとか。
+
+好きなものより、嫌いなものを共有した方が大事な判断が一致しやすい。
