--- a/shared/love/interesting/興味をひく.md
+++ b/shared/love/interesting/興味をひく.md
@@ -26,3 +26,7 @@
 単純に派手な演出は興味や関心を引く。凝っているとさらに興味を引く。
 
 言いたいことをそのまま言ってしまうとつまらない。言いたいことを婉曲に言うことで「なになに？」となる。
+
+最初の一手目だけは、わかりにくく伝えるべき。
+最初からわかりやすく伝えてしまうと、分かった気になってしまう。
+「何それ？」から入った方がいい。シンプルかつ、引っかかるようなことを言って興味をひく。
