--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -644,3 +644,11 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ユーモア自体「そんなわけねぇだろ」ってツッコミを待っているふしもある。
 
 ピンチをチャンスに変える。
+
+ユーモアが尖っているかどうか、共感されるのが狭い範囲なのか広い範囲なのか。
+
+弱さや醜さの肯定。
+
+つながりや受け入れを生じる。
+
+ユーモアは周りも良い気分にさせて好かれやすい。
