--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -152,3 +152,9 @@
 「不安だったけどうまくできて達成感があった」みたいに不安と達成感の二つがあれば達成感にフォーカスする。
 
 共感は「私たちは仲間だ」という確認のためにある。
+
+一緒に笑い合うのも共感。
+ユーモアやエンタメによって笑わせることで共感しやすい。
+ただ、愛想笑いだと自分は全く共感してないけど。
+
+共感は尊重というよりも、人とのつながりの認識かも。仲間を見つけた時に共感する。
