--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -60,3 +60,6 @@ https://youtu.be/h4xYHWFCQ3c?si=xkv2bJAwKu9mGL2s
 相手が笑わなかったら、「ちょっとウケを狙いすぎましたね」とか真剣な顔でメタいことを言うとか、ここが一番困る。相手の反応によっては追撃よりも謝罪の方がいい。
 
 最初から大きな笑いを狙うのは現実的じゃない。笑いは積み上げるもの。
+
+笑い自体は、ポジティブな感情があれば笑う。
+緊張と緩和はボケの基本だけど、自ら笑うなら単に喜びや楽しみがあればいい。
