--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -63,3 +63,8 @@ https://youtu.be/h4xYHWFCQ3c?si=xkv2bJAwKu9mGL2s
 
 笑い自体は、ポジティブな感情があれば笑う。
 緊張と緩和はボケの基本だけど、自ら笑うなら単に喜びや楽しみがあればいい。
+
+怒って笑うこともある。
+緊張状態からキレると一気に緩和される感じか。
+
+笑い自体はユーモアというよりも、ポジティブな感情の表現。
