--- a/games/ウミガメのスープ.md
+++ b/games/ウミガメのスープ.md
@@ -1,1 +1,5 @@
 ウミガメのスープはまず文章の疑問点、不明点を洗い出して、それを絞り込む質問に落とし込む。
+
+再翻訳ウミガメのスープ
+https://youtu.be/5xW7uFv5gZc?si=oINh_W2LtyC2FjaZ
+再翻訳挟んでもやってること同じで笑う。元々再翻訳されてるようなものなのかも。
