--- a/shared/war/攻撃.md
+++ b/shared/war/攻撃.md
@@ -8,3 +8,8 @@
 https://youtube.com/watch?v=tl84652spZE&si=2j9vkag6hOPlJbD5
 
 コンパクトな陣形は、連携しやすい反面、射程が短い。敵陣に接近しないと攻撃できない。
+
+- 否定
+- 批判
+- 罵倒
+- マウント
