--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -654,3 +654,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 ユーモアは周りも良い気分にさせて好かれやすい。
 
 隠された事実を暴く。
+
+ユーモアは悪い状況を笑いに変えるのが基本。緊張を緩和する。
