--- a/shared/learning/学習.md
+++ b/shared/learning/学習.md
@@ -325,3 +325,9 @@ OODA ループが学習の基本。
 理論だけじゃなくて、実践まで覚える。AIに例題出してもらうとか、AIと一緒に何か作るとか。
 
 何かを学ぶときに、どういうところを見ればいいかを学ぶ。
+
+自分で学んだ隙間の足りないところを聞くことで血肉になる。
+https://youtu.be/8E9xH-W0Pig?si=0TqqppfMevq_umy4
+
+受動的に授業や講義で教えてもらうばかりでは伸びにくい。
+基本は独学ベースで研究したり勉強したりして、わからないところは専門家に聞く。能動的に学ぶ。
