--- a/shared/game/genres/fighting/格闘ゲーム.md
+++ b/shared/game/genres/fighting/格闘ゲーム.md
@@ -37,3 +37,5 @@ https://x.com/fuesou/status/1806068277841715655
 「席は立たずして中段は立つ」（常闇トワ）
 
 格ゲーは全部できなくてもいいけど、その隙を突かれたときの対処は持っておかないと勝てない。できないことをできるようにしてもいいし、できないことをあえて隙として誘って、できることで罠を張ってリターンを取ってもいい。
+
+コンボだけはかけた時間が大きく影響する。やっぱ時間をかけてないとミスが増える。
