--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -203,3 +203,5 @@
 「すみません！」と、できればその場で、さらっと謝って話題を変えるとか、謝る代わりに日頃の感謝を示すこともできる。
 
 会話に意識を割きすぎていると疲れるので、会話はあまり頭を使わなくても回せるようにする。
+
+気遣いには自分より他者を優先する面がある。ただ、やりすぎると破滅する。
