--- a/shared/communication/media/language/rhetoric/比喩.md
+++ b/shared/communication/media/language/rhetoric/比喩.md
@@ -14,3 +14,5 @@
 比喩は、抽象的な印象を具体的な表現にしてくれる。
 
 ころさんがぐるぐる絡まったホースを見て「川崎ジャンクションやん」って言ってたのは面白かった。ホースの形をJCTに例えるだけでなく、「川崎」をつけてさらに具体的にしているのもポイントが高い。
+
+比喩を兼ねた描写。カビの臭いや暗い路地などは陰気さを演出する。事実を描写しながらどんな印象に注目すればいいかわかりやすい。
