--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -136,3 +136,5 @@ Know 知る
 不完全な情報でも意思決定できる。
 
 意思決定はデータを元にする判断と、不完全なデータを使った決断があると考える場合もあるが、まぁデータがあってもなくても判断って言い方でいいと思う。そもそもデータは不完全。
+
+選択肢を絞らないと判断したとは言えない。
