--- a/shared/love/interesting/興味をひく.md
+++ b/shared/love/interesting/興味をひく.md
@@ -30,3 +30,5 @@
 最初の一手目だけは、わかりにくく伝えるべき。
 最初からわかりやすく伝えてしまうと、分かった気になってしまう。
 「何それ？」から入った方がいい。シンプルかつ、引っかかるようなことを言って興味をひく。
+
+最初に「なにそれ？」という感覚を与えると興味をひきやすい。
