--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -158,3 +158,7 @@
 ただ、愛想笑いだと自分は全く共感してないけど。
 
 共感は尊重というよりも、人とのつながりの認識かも。仲間を見つけた時に共感する。
+
+共感には、内容よりも表現が大事。
+
+同じ内容でも、表現によって同意や共感を示すのが難しくなったり易しくなったりする。
