--- a/shared/voice/training/tips/ホイッスルボイス.md
+++ b/shared/voice/training/tips/ホイッスルボイス.md
@@ -3,3 +3,5 @@
 ホイッスルは顎を引くのもあり。
 
 声帯は鳴ってないかも。リコーダーみたいに空気の流れ道の形そのものが気流を変えて空気を揺らす感覚。
+
+Stellar Stellarの「だって僕は星だから」の入りのところはホイッスルみたいに出してると思う。かすれた感じで出す。
