--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -61,3 +61,6 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 
 何かを理解するということは、どんな刺激にどんな反応をするのか、を知ること。
 こだわりや価値観を知るのは、判断の基準を知るため。判断の基準を知れば、個別の判断を推測しやすくなる。でも重要なのは個別の反応を予測できること。
+
+説明が下手な人は理解も下手。
+構造がわかってない。
