--- a/shared/people/contact/first/他人から知人まで.md
+++ b/shared/people/contact/first/他人から知人まで.md
@@ -18,6 +18,8 @@
 
 https://sogyotecho.jp/salesman_lesson6/
 
+相手の考えていることを先回りして言うより、相手に話させて自分が共感する方が簡単。
+
 セールスでも飛び込み営業とか初めての訪問先では頻繁にこの段階から始めないといけない。
 
 いきなり連絡先を交換するよりは、サークルなどに参加して「また次回会おう」と約束する方が手軽ではある。
