--- a/shared/collaboration/organization/多様性.md
+++ b/shared/collaboration/organization/多様性.md
@@ -1,5 +1,7 @@
 # 多様性
 
+Diversity
+
 多様性があると思考の盲点を埋められる。
 
 互いの欠点を補い合う。
@@ -15,3 +17,4 @@
 一時的な多様性の中で一つの種だけが進展して、逆に均一化を招いてしまうことがある。
 
 多様性の逆は均一性。
+均一な方が便利な時も多い。トレードオフ。
