--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -656,3 +656,7 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 隠された事実を暴く。
 
 ユーモアは悪い状況を笑いに変えるのが基本。緊張を緩和する。
+
+まずは自分が笑う。
+
+度が過ぎたユーモアはtrickになることがある。誇張表現は嘘と紙一重。
