--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -577,3 +577,7 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 副作用が強い薬は、期待感を持って飲んだとしても、安心感を持ってはいけない。分量や症状に注意して、油断せずに飲む。
 
 信頼し合っている関係がラポール。
+
+初期の関係構築と長期の関係維持がある。
+
+印象は操作できるけど、信用は積み重ねるのに時間がかかる。実績が必要。
