--- a/shared/human/appearance/beauty/cosmetics/items/口紅.md
+++ b/shared/human/appearance/beauty/cosmetics/items/口紅.md
@@ -12,3 +12,6 @@ https://www.dior.com/ja_jp/beauty/products/%E3%83%87%E3%82%A3%E3%82%AA%E3%83%BC%
 https://www.chanel.com/jp/makeup/p/171912/rouge-coco-baume-hydrating-beautifying-tinted-lip-balm-buildable-colour/
 
 https://www.kose.co.jp/visee/lip/type/
+
+基本的には透明だけど血色を良くする、というリップもある。ちょっとだけ赤く光沢が出る。メンズでも使いやすい。
+https://www.amazon.co.jp/dp/B0B3F47DQ9
