--- a/shared/human/appearance/beauty/cosmetics/化粧品を選ぶ.md
+++ b/shared/human/appearance/beauty/cosmetics/化粧品を選ぶ.md
@@ -5,3 +5,10 @@ https://www.shiseido.co.jp/sw/beautyinfo/DB009098/
 
 薬として扱われていない時点で効果には上限がある。
 薬が欲しいなら化粧品売り場ではなく病院に行こう。皮膚科。
+
+選ぶポイント:
+
+- カバー力
+- 崩れにくさ
+- 使いやすさ
+- 自然さ
