--- a/shared/human/appearance/beauty/cosmetics/items/ファンデーション.md
+++ b/shared/human/appearance/beauty/cosmetics/items/ファンデーション.md
@@ -1,3 +1,15 @@
+## 役割
+
+- 肌の色を均一にする
+
+## 種類
+
+- クッション
+- パウダー
+- リキッド
+
+## その他
+
 > ファンデーションはパウダーからリキッドのものまで幅広くありますが、扱いやすさでいうとクッションファンデが初心者さんにはおすすめです。パウダーファンデのようにカサついてしまうことなく、リキッドファンデよりも手軽に使うことができます。
 > ファンデーションは色選びも重要！　不自然に見えてしまわないよう、顔の色に合うものをチョイスすることが大切です。顔の色に近いものの中でも明るめと暗めの 2 色で迷ったら、肌になじみやすい暗めを選んだ方が ◎！
 
