--- a/shared/human/appearance/beauty/cosmetics/化粧品の種類.md
+++ b/shared/human/appearance/beauty/cosmetics/化粧品の種類.md
@@ -1,9 +1,11 @@
 - ベースメイク
   - 化粧下地
     - スキンケア
+      - 乾燥防止
+    - 日焼け止め
+  - コントロールカラー
   - ファンデーション
   - フェイスパウダー
-  - コントロールカラー
 - ポイントメイク
   - コンシーラー
   - 口紅
