--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -87,3 +87,6 @@ https://youtube.com/watch?v=lEixj4MSNAo&si=LHL_AcQ90Wnk9lpn
 どんなビジネスも最初はやはり何らかのスキルから始まる。組織を動かすスキルはその後。
 
 少ない元手で実行できるビジネスのアイデアを見つけて、とにかく始める。
+
+どんなビジネスであっても、まずは1円を稼ぐところから。
+まぁ、実際には1000円とかの単位になると思うけど。
