--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -254,3 +254,6 @@ careの関心は注意の方が近いかも。mindとも近い。
 政治や社会に無関心でいられても、無関係ではいられない。関係があれば関心は持った方がいい。
 
 関心がないことは「これでいいや」になりがち。
+
+自分の関係していることが一番面白い。
+自分の好きなこと、嫌いなこと、推しのチームの勝ち負け、会社のボーナス、とか。
