--- a/shared/engagement/パートナー.md
+++ b/shared/engagement/パートナー.md
@@ -12,7 +12,7 @@
 
 「こうしろ」よりも「一緒にやろう」がパートナーだ。
 
-一蓮托生の関係。
+一蓮托生の関係。運命共同体。
 
 目的や利益を共有して、協力する。
 
@@ -53,3 +53,5 @@
 パートナーは助け合うもので、一方が助けるだけならもう一方は要らない。パートナーはあくまでも利害関係の一つで、相互に利がないと続ける意味がない。特に恋人の場合、一方が子育ての役に立たないなら切るべき。
 
 相手の幸せを一緒に祝う。自分ごとのように祝う。
+
+多少なりとも損得を共有する。
