--- a/shared/finance/利益.md
+++ b/shared/finance/利益.md
@@ -58,3 +58,7 @@ Profitはどちらかというと静的で物質的なもの。財産とか。
 どれくらいの規模で利益が出るのか把握して、少なくともそれだけの規模を目指す。
 
 真意や本音といったものは、結局のところ、「どういう利益が動いているか」でしかない。
+
+- 製品やサービスの数
+- ユーザーの数
+- 単価
