--- a/shared/job/経歴.md
+++ b/shared/job/経歴.md
@@ -18,3 +18,7 @@ https://qiita.com/saoyagi2/items/2c0bb9647ee9e16b7f4b
 
 キャリアは労働者的な考え方で、資本家的ではない。雇われ経営者も労働者。
 資本家なら経歴よりも資産の方が大事。どれだけ良い資産を持っているか。
+
+マネジメント経験がいきなり積めるところはほぼない。
+
+技術の実績になるところは割とある。給料がそんなに良くなくても、内容が良くて、とりあえず3年くらい実績があれば転職できる。
