--- a/shared/management/performance/怠慢.md
+++ b/shared/management/performance/怠慢.md
@@ -31,3 +31,5 @@
 パフォーマンスが落ちてないのに休みたがるのはただの怠惰。
 まぁ、生物というのは怠惰なものなので、むしろパフォーマンスを高めようとする生き方が狂っている。
 人間には社会性がないので、パフォーマンスが低い個体が死にやすい。
+
+面倒を感じるのは、計画が曖昧だったり、不確定要素をそのままにしたりしてるから。
