--- a/shared/humor/tips/自虐.md
+++ b/shared/humor/tips/自虐.md
@@ -37,3 +37,6 @@
 
 「自分は会話が下手だと思ってて」っていうの、もしかして自虐として受け取られた？フォローされてた。
 こういう別に自虐じゃないのに自虐だと思われてる、あるいは謙遜だと思われてるのってどうなんだろ。
+
+自虐は、「笑っていい」ことが相手に伝わらないと成立してない。まずは自分が笑う。
+日本人は平気でネガティブなことも話すので、本気か冗談かわからん。
